# movie-recommendation

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/recommender/: config.py  container.py  main.py  models.py  repository.py  service.py
tests/: test_api.py  test_service.py
