[project]
name = "movie-recommendation"
version = "0.1.0"
description = "Content recommendation API for movies and TV shows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "dependency-injector>=4.41",
  "pandas>=2.1",
  "python-multipart>=0.0.7",
  "httpx>=0.27"
]

[project.optional-dependencies]
 dev = []

[tool.uv]

[tool.uv.sources]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
